linked the new files

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <!-- CSS -->
-        <link rel="stylesheet" href="./css/style.css" type="text/css">
+        <link rel="stylesheet" href="../static/style.css" type="text/css">
 
         <!--Font - Montserrat-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">  
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <!-- Favicon -->
-        <link rel="icon" href="./images/profile.JPG">
+        <link rel="icon" href="../static/images/profile.JPG">
 
         <title>Arnab Sagar</title>
 
@@ -25,13 +25,13 @@
 <body>
         <!-- Scripts -->
         <div id="particles-js"></div>
-        <script type="text/javascript" src="./scripts/particles.js"></script>
-        <script type="text/javascript" src="./scripts/app.js"></script>
+        <script type="text/javascript" src="../static/particles.js"></script>
+        <script type="text/javascript" src="../static/app.js"></script>
         
         <!-- Flash Card -->
 <div class="card fadeIn one animate">
 
-        <img src="./images/profile.JPG" alt="Arnab" style="width:100%">
+        <img src="../static/images/profile.JPG" alt="Arnab" style="width:100%">
         <h1>Arnab Sagar</h1>
         <p class="title">Developer, Designer and 3D Artist</p>
         <p>University of Guelph<br>Bachelor of Computing, Class of 2024</p>
