added pdf code, still doesnt work

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -40,7 +40,7 @@
         <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/arnab.sagar/"><i class="fa fa-instagram"></i></a> 
         <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/arnab.sagar.988"><i class="fa fa-facebook"></i></a> 
         <a target="_blank" rel="noopener noreferrer" href="mailto:arnab.sagar47@gmail.com"><i class="fa fa-email"></i>✉</a> 
-        <p class='button'><button>Get in Touch</button></p>
+        <p class='button'><button>Download Resumes</button> <a href="/static/Sagar_Arnab_F20.pdf"></a>.</p>
 
 </div>
 
